правки всего сайта

--- a/app/history.html
+++ b/app/history.html
@@ -73,81 +73,47 @@
                         <button class="my-deputat__link" onclick="openTab2(event, 'service')">Муниципальная служба</button>
                     </div>
                     <div id="history" class="my-deputat__content">
-                        <form class="my-deputat__form">
-                            <input type="search" placeholder="Поиск депутатов по карте">
-                        </form>
-                        <ul class="my-deputat__list">
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/1.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Ножечкин<br>Илья Владимирович</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Председатель Ульяновской Городской Думы</span></a>
-                                <span class="my-deputat__district">Округ 29</span>
-                                <a class="my-deputat__email" href="mailto:nozhechkin@ugd.ru">nozhechkin@ugd.ru</a>
-                            </li>
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/2.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Айзатуллина<br>Алсу Феритовна</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Первый заместитель председателя УГД</span></a>
-                                <span class="my-deputat__district">Округ 22</span>
-                                <a class="my-deputat__email" href="ayzatullina@ugd.ru">ayzatullina@ugd.ru</a>
-                            </li>
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/3.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Крючков<br>Игорь Иванович</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
-                                <span class="my-deputat__district">Округ 11</span>
-                                <a class="my-deputat__email" href="kryuchkov@ugd.ru">kryuchkov@ugd.ru</a>
-                            </li>
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/4.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Моргачев<br>Сергей Владимирович</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
-                                <span class="my-deputat__district">Округ 25</span>
-                                <a class="my-deputat__email" href="morgachev@ugd.ru">morgachev@ugd.ru</a>
-                            </li>
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/5.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Буланов<br>Игорь Николаевич</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
-                                <span class="my-deputat__district">Округ 7</span>
-                                <a class="my-deputat__email" href="bulanov@ugd.ru">bulanov@ugd.ru</a>
-                            </li>
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/6.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Долгов<br>Михаил Севостьянович</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
-                                <span class="my-deputat__district">Округ 33</span>
-                                <a class="my-deputat__email" href="dolgov@ugd.ru">dolgov@ugd.ru</a>
-                            </li>
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/7.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Зонов<br>Константин Андреевич</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
-                                <span class="my-deputat__district">Округ 30</span>
-                                <a class="my-deputat__email" href="zonow@ugd.ru">zonow@ugd.ru</a>
-                            </li>
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/8.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Седов<br>Денис Константинович</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Заместитель председателя УГД</span></a>
-                                <span class="my-deputat__district">Округ 26</span>
-                                <a class="my-deputat__email" href="sedov@ugd.ru">sedov@ugd.ru</a>
-                            </li>
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/9.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Абитов<br>Рамиль Загитович</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Депутат УГД</span></a>
-                                <span class="my-deputat__district">Округ 4</span>
-                                <a class="my-deputat__email" href="abitov@ugd.ru">abitov@ugd.ru</a>
-                            </li>
-                            <li class="my-deputat__item">
-                                <a href="deputat.html"><img class="my-deputat__image" src="img/deputat/10.jpg" alt="" title=""></a>
-                                <a href="deputat.html"><span class="my-deputat__name">Анохин<br>Константин Евгеньевич</span></a>
-                                <a href="deputat.html"><span class="my-deputat__post">Депутат УГД</span></a>
-                                <span class="my-deputat__district">Округ 2</span>
-                                <a class="my-deputat__email" href="anohin@ugd.ru">anohin@ugd.ru</a>
-                            </li>
-                        </ul>
+                        <h2>История Ульяновской Городской Думы</h2>
+                        <div class="evolution__range-block">
+                            <input class="evolution__range" type="range" list="tickmarks" min="1648" max="2022" value="2000" name="range" step="1" list="tickmarks" oninput="document.querySelector('#evolution__years-start').textContent = this.value;"/>
+                            <div class="evolution__years-block" style="visibility: hidden;position: absolute;left: 0;">
+                                <span class="current-year"></span>
+                                <span id="evolution__years-start">1700</span>
+                            </div>
+                            <datalist id="tickmarks" style="width: 100%;display: flex; justify-content: space-between;">
+                                <option value="2022" label="2015-2022"></option>
+                                <option value="2010" label="2010—2015"></option>
+                                <option value="2005" label="2005—2010"></option>
+                                <option value="2001" label="2001—2005"></option>
+                                <option value="1990" label="1990—2000"></option>
+                                <option value="1917" label="1917—1990"></option>
+                                <option value="1864" label="1864—1917"></option>
+                                <option value="1648" label="XVI—XVIII в."></option>
+                            </datalist>
+                        </div>
+                        <div class="history__text-block">
+                            <p class="history__text-title">Ульяновская Городская Дума V созыва, 2015 - 2020 гг.</p>
+                            <p class="history__text-subtitle">Ульяновская Городская Дума V созыва</p>
+                            <p class="history__text">13 Сентября 2015 года состоялись выборы в Ульяновскую Городскую Думу V созыва. Выборы 30 депутатов проходили по одномандатным округам, 10 депутатов были избраны по партийным спискам. Большинство народных избранников – от партии «Единая Россия». Главой города, возглавляющим также  Городскую Думу, стал Сергей Панчин. Заместителями Главы города избраны Анатолий Васильев, Игорь Буланов, Илья Ножечкин. Также на первом заседании была утверждена новая структура Думы, согласно которой образовано 5 комитетов.</p>
+                            <p class="history__text">В мае 2018 года в связи с досрочным прекращением полномочий Главы города Ульяновска - Сергея Панчина вступили в силу правовые нормы Устава МО «город Ульяновск», предусматривающие изменения порядка избрания Главы города. Согласно новой редакции Устава Глава города избирается Городской Думой из числа кандидатов, представленных конкурсной комиссией и возглавляет городскую администрацию, а Думой руководит председатель Городской Думы, избираемый из числа депутатов. 18 Июля 2018 года на заседании Думы в результате тайного голосования единогласным решением депутатов Председателем Городской Думы выбран Илья Ножечкин.</p>
+                            <p class="history__text-title margin-top">Итоги работы профильных комитетов:</p>
+                            <p class="history__text black"><b>Комитет по социальной политике и развитию человеческого потенциала </b></p>
+                            <p class="history__text">13 Сентября 2015 года состоялись выборы в Ульяновскую Городскую Думу V созыва. Выборы 30 депутатов проходили по одномандатным округам, 10 депутатов были избраны по партийным спискам. Большинство народных избранников – от партии «Единая Россия». Главой города, возглавляющим также  Городскую Думу, стал Сергей Панчин. Заместителями Главы города избраны Анатолий Васильев, Игорь Буланов, Илья Ножечкин. Также на первом заседании была утверждена новая структура Думы, согласно которой образовано 5 комитетов.</p>
+                            <p class="history__text">В мае 2018 года в связи с досрочным прекращением полномочий Главы города Ульяновска - Сергея Панчина вступили в силу правовые нормы Устава МО «город Ульяновск», предусматривающие изменения порядка избрания Главы города. Согласно новой редакции Устава Глава города избирается Городской Думой из числа кандидатов, представленных конкурсной комиссией и возглавляет городскую администрацию, а Думой руководит председатель Городской Думы, избираемый из числа депутатов. 18 Июля 2018 года на заседании Думы в результате тайного голосования единогласным решением депутатов Председателем Городской Думы выбран Илья Ножечкин.</p>
+                            <p class="history__text margin-top black"><b>Комитет по местному самоуправлению и развитию гражданского общества, по вопросам правопорядка и противодействия коррупции</b></p>
+                            <p class="history__text">Председатель комитета: Лазарев Николай Алексеевич, заместитель председателя Ульяновской Городской Думы</p>
+                            <p>Особое внимание Комитетом по местному самоуправлению и развитию гражданского общества, по вопросам правопорядка и противодействия коррупции Ульяновской Городской Думы уделялось проведению мероприятий направленных:</p>
+                            <p>- на профилактику терроризма, экстремизма и обеспечения общественной безопасности (постановление «О реализации на территории муниципального образования «город Ульяновск» мер по профилактике терроризма, экстремизма и обеспечения общественной безопасности», 2015);</p>
+                            <p>- на воспитание в обществе толерантности и правовой культуры в вопросах межнациональных и межконфессиональных отношений (постановление «О выполнении на территории муниципального образования «город Ульяновск» мероприятий, направленных на воспитание в обществе толерантности и правовой культуры в вопросах межнациональных и межконфессиональных отношений»,2016);</p>
+                            <p>- на обеспечение кибербезопасности школьников города, в том числе с обязательным проведением уроков по информационной безопасности, информированию родителей на родительских собраниях (постановление «О повышении эффективности мер по обеспечению информационной безопасности обучающихся образовательных организаций муниципального образования «город Ульяновск», 2019. Постановление разработано с целью достижения согласованного подхода по выработке и реализации комплекса мер, направленных на защиту детей от негативной информации при использовании информационно-телекоммуникационной сети «Интернет» в образовательной организации, применения в муниципальных образовательных организациях Методических рекомендаций по ограничению в образовательных организациях доступа обучающихся к видам информации, распространяемой посредством сети «Интернет», причиняющей вред здоровью и (или) развитию детей);</p>
+                            <p>- на развитие патриотического воспитания детей и молодёжи на территории МО «город Ульяновск» (постановление «О совершенствовании патриотического воспитания населения Ульяновской области и подготовки молодёжи к военной службе», 2019. В целях повышения качества работы по патриотическому воспитанию обучающихся и повышению их мотивации к службе Отечеству, формированию уважения к историко-культурным традициям Родины было рекомендовано увеличить количество мероприятий по патриотическому воспитанию в  муниципальных образовательных организациях города Ульяновска);</p>
+                            <p>- на профилактику безнадзорности и правонарушений несовершеннолетних ( постановление «О профилактике безнадзорности и правонарушений несовершеннолетних на территории муниципального образования «город Ульяновск», 2020. Данное постановление направлено на своевременное выявление семейного неблагополучия, исключение формализма при исполнении возложенных обязанностей, надлежащее взаимодействие, как между органами и учреждениями системы профилактики, так и подразделениями одного и того же органа, надлежащий обмен информацией о безнадзорных детях, семьях, находящихся в социально опасном положении, несовершеннолетних, склонных к совершению правонарушений и преступлений, в том числе и после введения режима повышенной готовности  на территории муниципального образования «город Ульяновск» в 2020 году).</p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                        </div>
                     </div>
                     <div id="structure" class="my-deputat__content">
                         Структура
