--- a/app/index.html
+++ b/app/index.html
@@ -394,7 +394,7 @@
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Открытый бюджет</a></li>
                         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Отчеты главы города за 2020г</a></li>
                     </ul>
-                    <p class="footer_copyrigt">© 2022 Группа компаний HeadHunter</p>
+                    <p class="footer_copyrigt">© 2022 Группа компаний HeadHunter</p>ff
                 </div>
             </footer>
         </main>
