--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li><a href="history.html" rel="noopener">О Думе</a></li>
                     <li><a href="deputats.html" rel="noopener">Депутаты</a></li>
-                    <li><a href="#" rel="noopener">Деятельность</a></li>
+                    <li><a href="activity.html" rel="noopener">Деятельность</a></li>
                     <li><a href="#" rel="noopener">Приёмная</a></li>
                     <li><a href="#" rel="noopener">Комитеты</a></li>
                     <li><a href="#" rel="noopener">Молодёжная дума</a></li>
