--- a/app/deputats.html
+++ b/app/deputats.html
@@ -38,9 +38,9 @@
             </form>
             <nav class="left-side__navigation">
                 <ul>
-                    <li><a href="#" rel="noopener">О Думе</a></li>
-                    <li><a href="#" rel="noopener">Депутаты</a></li>
-                    <li><a href="#" rel="noopener">Деятельность</a></li>
+                    <li><a href="history.html" rel="noopener">О Думе</a></li>
+                    <li><a href="deputats.html" rel="noopener">Депутаты</a></li>
+                    <li><a href="activity.html" rel="noopener">Деятельность</a></li>
                     <li><a href="#" rel="noopener">Приёмная</a></li>
                     <li><a href="#" rel="noopener">Комитеты</a></li>
                     <li><a href="#" rel="noopener">Молодёжная дума</a></li>
