адаптивная верстка  от 768 и выше

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,9 @@
     </header>
     <div class="site-body">
         <div class="left-side">
+            <div class="menu__arrow">
+                <img src="img/blocks/arrow.png">
+            </div>
             <form action="#" method="GET">
                 <input class="left-side__search"  type="search" placeholder="Поиск по сайту">
             </form>
