--- a/app/committees.html
+++ b/app/committees.html
@@ -33,6 +33,9 @@
     </header>
     <div class="site-body">
         <div class="left-side">
+            <div class="menu__arrow">
+                <img src="img/blocks/arrow.png">
+            </div>
             <form action="#" method="GET">
                 <input class="left-side__search"  type="search" placeholder="Поиск по сайту">
             </form>
@@ -63,7 +66,7 @@
             <section class="deputat">
                 <h1 class="deputat__name">Комитеты</h1>
             </section>
-            <section class="my-deputat deputat-page">
+            <section class="my-deputat committees-page">
                 <div class="my-deputat__body">
                     <div class="my-deputat__tab activity">
                         <button class="my-deputat__link active" onclick="openTab2(event, 'structure_committees')">Состав комитетов</button>
