--- a/app/reception.html
+++ b/app/reception.html
@@ -36,6 +36,9 @@
     </header>
     <div class="site-body">
         <div class="left-side">
+            <div class="menu__arrow">
+                <img src="img/blocks/arrow.png">
+            </div>
             <form action="#" method="GET">
                 <input class="left-side__search"  type="search" placeholder="Поиск по сайту">
             </form>
@@ -66,7 +69,7 @@
             <section class="deputat">
                 <h1 class="deputat__name">Приемная</h1>
             </section>
-            <section class="my-deputat deputat-page">
+            <section class="my-deputat reception-page">
                 <div class="my-deputat__body">
                     <div class="my-deputat__tab activity">
                         <button class="my-deputat__link active" onclick="openTab2(event, 'reception')">Работа с обращениями граждан</button>
